# coding-agent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  Justfile  LICENSE  README.md  book.toml  build_ubuntu_25_locally.sh
book/: 404.html  index.html  searchindex-d7e8dbc3.js
book/tutorial/: self_healing_loop.html
docs/book/: api.html  architecture.html  observability.html  print.html  searcher-c2a407aa.js  toc-467d89f3.js  toc.html
docs/book/tutorial/: custom_agent.html
docs/knowledge/: build123d_readthedocs.txt  coder_knowledge.md  compliance_knowledge.md  intent_knowledge.md  physics_knowledge.md  researcher_knowledge.md  reviewer_knowledge.md  supervisor_knowledge.md
docs/knowledge/learned/: coder_learned.md  compliance_learned.md  intent_learned.md  oilgas_learned.md  physics_learned.md  researcher_learned.md  reviewer_learned.md  supply_learned.md
docs/src/: SUMMARY.md  api.md  architecture.md  intro.md  observability.md
docs/src/tutorial/: custom_agent.md  project_implementation_tutorial.md  self_healing_loop.md
examples/: agentic_workflow.rs  otel_smoke.rs  test_viewer.rs
src/: errors.rs  infra.rs  lib.rs  main.rs  setup.rs  telemetry.rs  types.rs  viewer.rs
src/agentic/: errors.rs  mod.rs  orchestrator.rs
src/agentic/agents/: coder.rs  compliance_reviewer.rs  intent_reviewer.rs  mod.rs  oil_gas_reviewer.rs  physics_reviewer.rs  prompts.rs  researcher.rs  reviewer.rs  supervisor.rs  supply_reviewer.rs  utils.rs
src/agentic/tools/: build123d_docs.rs  code_editor.rs  example_searcher.rs  knowledge_base.rs  (+3 more)
tmp/: TROUBLESHOOTING_RECORD.md
