[package]
name = "build123d_cad"
version = "1.0.0"
edition = "2024"
authors = ["Hamze Ghalebi"]
description = "A multi-agent orchestrator for autonomous parametric CAD code generation using build123d and Claude via Azure MaaS."
repository = "https://github.com/hghalebi/rust-code-generator"
readme = "README.md"
keywords = ["build123d", "cad", "ai", "claude", "parametric"]
categories = ["science", "simulation", "mathematics"]
license-file = "LICENSE"
publish = false
default-run = "build123d_cad"

[lib]
name = "build123d_cad"
path = "src/lib.rs"

[[bin]]
name = "build123d_cad"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
rig = { package = "rig-core", version = "0.28.0" }
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "http-proto", "reqwest-client", "trace", "tls-roots", "gzip-tonic"] }
tracing = "0.1"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.100"
serde_json = "1.0.149"
schemars = "0.8"
serpscraper = "0.1.3"
thiserror = "2.0.18"
base64 = "0.22"
libc = "0.2"
tonic = "0.13"
uuid = { version = "1", features = ["v4"] }
